Fix contrast in syntax highlighter

--- a/hell/assets/prism.css
+++ b/hell/assets/prism.css
@@ -244,3 +244,7 @@ pre.language-html::before {
 pre.language-css::before {
   content: "CSS";
 }
+
+.token.important, .token.regex {
+  color: #673AB7;
+}
